--- a/API_BABWebApp/appsettings.json
+++ b/API_BABWebApp/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BABWebAppConnection": "Server=localhost;User ID=bab.dev;Password=bab.bo.dev.2022;Database=bab"
+    "BABWebAppConnection": "Server=bab-bo-database-server.mysql.database.azure.com;Port=3306;Database=bab;Uid=bab_dev@bab-bo-database-server.mysql.database.azure.com;Pwd=Bancodealimentosbolivia2022"
   },
   "SecretKey": "c0e525b3-af69-493a-a381-991e0668746a",
   "ValidIssuer": "https://localhost:5001",
