--- a/API_BABWebApp/appsettings.json
+++ b/API_BABWebApp/appsettings.json
@@ -8,9 +8,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BABWebAppConnection": "Server=bab-bo-database-server.mysql.database.azure.com;Port=3306;Database=bab;Uid=bab_dev@bab-bo-database-server.mysql.database.azure.com;Pwd=Bancodealimentosbolivia2022"
+    "BABWebAppConnection": "Server=bab-bo-database-server.mysql.database.azure.com;Port=3306;Database=bab;UserID =bab_dev;Pwd=Bancodealimentosbolivia2022"
   },
   "SecretKey": "c0e525b3-af69-493a-a381-991e0668746a",
-  "ValidIssuer": "https://localhost:5001",
-  "ValidAudience": "https://localhost:5001"
+  "ValidIssuer": "bab-bo-api.azurewebsites.net",
+  "ValidAudience": "bab-bo-api.azurewebsites.net"
 }
