Set Copy to Output Directory Property in .xml fiile

--- a/API_BABWebApp/API_BABWebApp.csproj
+++ b/API_BABWebApp/API_BABWebApp.csproj
@@ -29,6 +29,12 @@
     <ProjectReference Include="..\Repository\Repository.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="API_BABWebApp.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 
